# starbyte

./: .gitignore  Cargo.toml
.config/starbyte/: config.toml
.github/workflows/: ci.yml
crates/starbyte-cli/: Cargo.toml
crates/starbyte-cli/src/: main.rs
crates/starbyte-cli/tests/: cli.rs
crates/starbyte-core/: Cargo.toml
crates/starbyte-core/benches/: core_bootstrap.rs
crates/starbyte-core/src/: bus.rs  coprocessor.rs  dma.rs  emulator.rs  error.rs  frontend.rs  lib.rs  system.rs  testing.rs  timing.rs
crates/starbyte-core/src/apu/: mod.rs  spc700.rs
crates/starbyte-core/src/cartridge/: header.rs  mod.rs
crates/starbyte-core/src/coprocessor/: cx4.rs  dsp.rs  mod.rs  sa1.rs  secondary.rs  superfx.rs
crates/starbyte-core/src/cpu_65816/: mod.rs  registers.rs
crates/starbyte-core/src/input/: mod.rs
crates/starbyte-core/src/manifest/: mod.rs
crates/starbyte-core/src/ppu/: mod.rs
crates/starbyte-core/src/testing/: cpu_65816.rs  mod.rs  rom.rs  spc700.rs
crates/starbyte-egui/: Cargo.toml
crates/starbyte-egui/src/: app.rs  logging.rs  main.rs  session.rs  worker.rs
crates/starbyte-frontend/: Cargo.toml
crates/starbyte-frontend/src/: lib.rs  library.rs
docs/: commercial-rom-roadmap.md  coprocessor-roadmap.md  frontend-architecture.md  gui-roadmap.md  roadmap.md
