[workspace]
members = ["crates/starbyte-cli", "crates/starbyte-core"]
default-members = ["crates/starbyte-cli"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["OpenAI Codex"]
rust-version = "1.85"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
