[package]
name = "starbyte-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "starbyte"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "env"] }
serde_json = "1.0.150"
starbyte-core = { path = "../starbyte-core" }
starbyte-frontend = { path = "../starbyte-frontend" }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }

[dev-dependencies]
assert_cmd = "2.2.2"
tempfile = "3.23.0"
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }

[lints]
workspace = true
