[package]
name = "starbyte-egui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "starbyte-egui"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
eframe = { version = "0.32.3", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui_extras = "0.32.3"
image = { version = "0.25.8", default-features = false, features = ["jpeg", "png"] }
rfd = "0.15.4"
starbyte-core = { path = "../starbyte-core" }
starbyte-frontend = { path = "../starbyte-frontend" }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }

[lints]
workspace = true
