[package]
name = "starbyte-frontend"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
name = "starbyte_frontend"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.102"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha1 = "0.10.6"
starbyte-core = { path = "../starbyte-core" }
tracing = "0.1.44"
urlencoding = "2.1.3"
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.23.0"

[lints]
workspace = true
